# goldcaptain

./: CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.txt  camera.cpp  camera.h  dungeonmap.cpp  dungeonmap.h  game.cpp  game.h  init_cmake.py  init_make.py  main.cpp  make.sh  make_dep.py  note.org  stdafx.h  util.cpp  util.h
src/: captainscene.cpp  captainscene.h  dungeonmap.cpp  dungeonmap.h  goldcaptain.cpp  goldcaptain.h  main.cpp  mainscene.cpp  mainscene.h
